Refactor BI analytics framework examples